--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>webkid react starterkit</title>
     <link rel="stylesheet" href="css/main.css">
+    <!--<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />-->
+    <!--<script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>-->
   </head>
   <body>
     <script src="js/main.js"></script>
